Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-20008

Crash on rename symbol

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Not Evaluated
    • Qt Creator 4.6.1
    • Qt Creator 4.6.0-rc1
    • C/C++/Obj-C++ Support
    • None
    • Windows 7, Qt 5.10.1

    Description

      When I pressed Ctrl-R to rename a symbol, Qt Creator crashed. The Clang Refactoring plugin is disabled.

      7  UnhandledExceptionFilter                              kernel32                       0x7743bcac    
      8  EtwEventSetInformation                                ntdll                          0x776c0108    
      9  _C_specific_handler                                   ntdll                          0x77657958    
      10 RtlDecodePointer                                      ntdll                          0x7766812d    
      11 RtlUnwindEx                                           ntdll                          0x7765855f    
      12 KiUserExceptionDispatcher                             ntdll                          0x7768bcb8    
      13 QTextCursorPrivate::QTextCursorPrivate                Qt5Gui                         0x7febce2132d 
      14 QTextFrame::iterator::currentBlock                    Qt5Gui                         0x7febcdf0042 
      15 QTextCursor::movePosition                             Qt5Gui                         0x7febce24568 
      16 Utils::Text::wordStartCursor                          textutils.cpp              110 0x7fec818e9a8 
      17 <lambda_752cb96bf711257e9a9db8ae36d31510>::operator() clangrefactoringengine.cpp 59  0x7fec4dd141f 
      18 QMetaObject::activate                                 Qt5Core                        0x7febc91b6f1 
      19 QFutureWatcherBase::event                             Qt5Core                        0x7febc75f37f 
      20 QApplicationPrivate::notify_helper                    Qt5Widgets                     0x7fec7118b30 
      21 QApplication::notify                                  Qt5Widgets                     0x7fec71179b7 
      22 QCoreApplication::notifyInternal2                     Qt5Core                        0x7febc8fc119 
      23 QCoreApplicationPrivate::sendPostedEvents             Qt5Core                        0x7febc8fe2bd 
      24 qt_plugin_query_metadata                              qwindows                       0x7fec8389b5f 
      25 QEventDispatcherWin32::processEvents                  Qt5Core                        0x7febc945a65 
      26 TranslateMessageEx                                    USER32                         0x774d9bbd    
      27 TranslateMessage                                      USER32                         0x774d98c2    
      28 QEventDispatcherWin32::processEvents                  Qt5Core                        0x7febc945236 
      29 qt_plugin_query_metadata                              qwindows                       0x7fec8389b39 
      30 QEventLoop::exec                                      Qt5Core                        0x7febc8f7fd3 
      31 QCoreApplication::exec                                Qt5Core                        0x7febc8fad74 
      32 main                                                  main.cpp                   546 0x13f688a8f   
      33 WinMain                                               qtcreator                      0x13f68a4c4   
      34 __scrt_common_main_seh                                exe_common.inl             253 0x13f6896a3   
      35 BaseThreadInitThunk                                   kernel32                       0x773b59cd    
      36 RtlUserThreadStart                                    ntdll                          0x7766a561    

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-20008
        # Subject Branch Project Status CR V

        Activity

          People

            yvvan Ivan Donchevskii
            orgads Orgad Shaneh
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes