Clang: Check that local renaming QFuture is not cancelled

We can't take QFuture result if it's cancelled.

Task-number: QTCREATORBUG-20008
Change-Id: I781746cf1d638627bb5992efa23d94111908f6d0
Reviewed-by: Marco Bubke <marco.bubke@qt.io>